--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -79,6 +79,10 @@ h1, h2, h3, h4{
   // text-transform: uppercase;  
 }
 
+#page-content{
+  margin-top: 0;
+}
+
 h5{
   font-size: 2em;
   margin-top: 2rem;
